# lardata

./: CMakeLists.txt  altCMakeLists.cmake
AnalysisAlg/: CMakeLists.txt  CalorimetryAlg.h  altCMakeLists.cmake
AnalysisBase/: CMakeLists.txt  altCMakeLists.cmake  classes.h  classes_def.xml
DetectorInfo/: CMakeLists.txt  DetectorClocksStandard.cxx  DetectorPropertiesStandard.h  LArPropertiesStandard.h
MCBase/: CMakeLists.txt  altCMakeLists.cmake
Modules/: lardataConfig.cmake.in
OpticalDetectorData/: CMakeLists.txt  altCMakeLists.cmake
RawData/: CMakeLists.txt  altCMakeLists.cmake
RawData/utils/: CMakeLists.txt  altCMakeLists.cmake
RecoBase/: CMakeLists.txt  Hit.cxx  Hit.h  Track.cxx  Track.h  Wire.cxx  Wire.h  altCMakeLists.cmake  classes.h  classes_def.xml
RecoBaseArt/: CMakeLists.txt  altCMakeLists.cmake
RecoObjects/: BezierTrack.cxx  CMakeLists.txt  InteractGeneral.cxx  InteractPlane.cxx  KGTrack.cxx  KHit.h  KHitBase.h  KHitContainerWireLine.cxx  KHitContainerWireX.cxx  KHitMulti.h  KHitWireLine.cxx  KHitWireX.cxx  Propagator.cxx  altCMakeLists.cmake
Utilities/: CMakeLists.txt  DatabaseUtil.h  DatabaseUtilProvider.cc  DatabaseUtilProvider.h  DatabaseUtil_service.cc  DetectorProperties.h  DetectorProperties_service.cc  GeometryHelper.cxx  GeometryHelper.h  GeometryUtilities.cxx  GeometryUtilities.h  LArFFT_service.cc  LArProperties.h  LArProperties_service.cc  PxHitConverter.h  SimpleTimeService.h  TimeService.h  TimeService_service.cc  altCMakeLists.cmake  larproperties.fcl  services.fcl  services_argoneut.fcl  services_lartpcdetector.fcl
Utilities/test/: CMakeLists.txt  LArPropTest_module.cc  altCMakeLists.cmake  lartest.fcl
lardata/: CMakeLists.txt
lardata/AnalysisAlg/: CMakeLists.txt  CalorimetryAlg.h
lardata/ArtDataHelper/: CMakeLists.txt  HitCreator.cxx  HitCreator.h  TrackUtils.cxx
lardata/ArtDataHelper/Dumpers/: CMakeLists.txt
lardata/DetectorInfo/: CMakeLists.txt  DetectorClocksStandard.cxx  DetectorProperties.h  DetectorPropertiesStandard.cxx  DetectorPropertiesStandard.h  LArPropertiesStandard.cxx  LArPropertiesStandard.h  detectorproperties.fcl  larproperties.fcl
lardata/DetectorInfoServices/: CMakeLists.txt  DetectorPropertiesServiceStandard.h
lardata/MCBase/: CMakeLists.txt
lardata/OpticalDetectorData/: CMakeLists.txt
lardata/RawData/: CMakeLists.txt
lardata/RecoBase/: Track.cxx
lardata/RecoBaseArt/: CMakeLists.txt  HitCreator.cxx  HitCreator.h
lardata/RecoBaseProxy/: CMakeLists.txt
lardata/RecoObjects/: BezierTrack.cxx  CMakeLists.txt  InteractGeneral.cxx  InteractPlane.cxx  KHitContainer.h  KHitContainerWireLine.cxx  KHitContainerWireX.cxx  KHitWireLine.cxx  KHitWireX.cxx  Propagator.cxx
lardata/Utilities/: AssnHelper.h  CMakeLists.txt  DatabaseUtil.h  DatabaseUtil_service.cc  DetectorPropertiesServiceArgoNeuT_service.cc  GeometryUtilities.cxx  GeometryUtilities.h  LArFFT_service.cc  LArPropertiesServiceArgoNeuT_service.cc  PxHitConverter.h  eventdump.fcl  services_argoneut.fcl  services_lartpcdetector.fcl
test/: CMakeLists.txt  altCMakeLists.cmake
test/ArtDataHelper/: CMakeLists.txt  HitCollectionCreatorTest_module.cc
test/DetectorInfo/: CMakeLists.txt
test/RawData/: CMakeLists.txt
ups/: product_deps
(+14 files in other folders)
